Revision history for Pod-To-PDF

{{$NEXT}}

0.0.4  2022-02-27T06:13:12+13:00
    - Fix internal links
    - Warn, don't abort if :@fonts file is missing

0.0.3  2022-02-26T15:39:14+13:00
    - Fix rendering of =SUBTITLE and other uppercased headers
    - Parse external links to ensure that they're legal
    - Fix internal destination name generation

0.0.2  2022-02-25T13:17:10+13:00
    - Fix testing under zef install
    - Minor refactor of line-breaking

0.0.1  2022-02-25T12:22:35+13:00
    - Initial version